# hebrew-anagram

./: .coverage-thresholds.json  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  pyproject.toml
.ai/: session-handoff.md  task.md  validation-notes.md
.ai/validation-runs/: agent_setup_validation_20260507_221027.txt  (+8 more)
.metaswarm/: external-tools.yaml  project-profile.json
assets/: index-BVgBgVgi.js.map  index-Bfgopo74.js  index-Bfgopo74.js.map  index-ByuNb7JV.js  index-ByuNb7JV.js.map  index-CBCI142U.css  index-CMCjDEaA.js  index-CMCjDEaA.js.map  index-CUlDDCPa.css  index-CVBVLyI7.css  index-CW5DtpvU.js  index-CW5DtpvU.js.map  index-CZNiaH4A.js  index-CZNiaH4A.js.map  index-C_L0JbJP.js  index-C_L0JbJP.js.map  index-CgqJW3rw.js  index-CgqJW3rw.js.map  index-CpFPQYO3.js  index-CpFPQYO3.js.map  index-Cv0V6lLJ.js  index-Cv0V6lLJ.js.map  index-D0JqBT8J.css  index-D34KREj0.css  index-D5YWp6tj.css  index-D5i2G-b8.js  index-D5i2G-b8.js.map  index-DM_ovNl2.js  index-DM_ovNl2.js.map  index-DYVH-w-F.css  index-DcUAzf_j.css  index-DnWaztqF.js  index-DnWaztqF.js.map  main-Cwd7Jzt9.js  main-D2-CwZjW.js.map  main-EftxUkpz.js  multiwordAnagrams-2PFEVv92.js  multiwordAnagrams-2PFEVv92.js.map  multiwordAnagrams-Co3kXuE-.js  multiwordAnagrams-Co3kXuE-.js.map  (+6 more)
data/: sample_words_he.txt
scripts/: setup_metaswarm.py  validate_agent_setup.py
tests/: test_dictionary.py  test_letters.py  test_matcher.py  test_scoring.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  (+2 more)
yuval/: index.html
(+28 files in other folders)
